--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
       <div class="container header-wrapper">
         <nav class="nav">
           <!-- Logo -->
-          <a class="logo-primary" href="./index.html"
-            >Web<span class="logo-part">Studio</span></a
+          <a class="logo header" href="./index.html"
+            >Web<span class="logo-right dark-theme">Studio</span></a
           >
 
           <!-- Navigation -->
@@ -42,17 +42,23 @@
         </nav>
 
         <!-- Contacts -->
-        <address class="addr-primary">
-          <a class="addr-link" href="mailto:info@devstudio.com"
-            ><svg class="addr-icon" width="16" height="12">
-              <use href="./images/sprite.svg#envelope"></use></svg
-            >info@devstudio.com</a
-          >
-          <a class="addr-link" href="tel:+380961111111"
-            ><svg class="addr-icon" width="10" height="16">
-              <use href="./images/sprite.svg#smartphone"></use></svg
-            >+38 096 111 11 11</a
-          >
+        <address class="contacts-header">
+          <ul class="contacts-header-list">
+            <li class="contacts-header-item">
+              <a class="contacts-header-link" href="mailto:info@devstudio.com"
+                ><svg class="contacts-header-icon" width="16" height="12">
+                  <use href="./images/sprite.svg#envelope"></use></svg
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-header-item">
+              <a class="contacts-header-link" href="tel:+380961111111"
+                ><svg class="contacts-header-icon" width="10" height="16">
+                  <use href="./images/sprite.svg#smartphone"></use></svg
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </address>
       </div>
     </header>
@@ -284,17 +290,27 @@
       <div class="container footer-wrapper">
         <div class="footer-contacts-wrapper">
           <!-- Logo -->
-          <a class="logo-secondary" href="./index.html"
-            >Web<span class="logo-part">Studio</span></a
+          <a class="logo footer" href="./index.html"
+            >Web<span class="logo-right light-theme">Studio</span></a
           >
 
           <!-- Contacts -->
-          <address class="addr-secondary">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="addr-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-            <a class="addr-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <address class="contacts-footer">
+            <p class="contacts-footer-location">
+              г. Киев, пр-т Леси Украинки, 26
+            </p>
+            <ul class="contacts-footer-list">
+              <li class="contacts-footer-item">
+                <a class="contacts-footer-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts-footer-item">
+                <a class="contacts-footer-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
           </address>
         </div>
 
